Gridify the site on an unfortunate 26px. Whitespace fixes.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,340 +1,343 @@
 body {
-	margin:0px;
-	padding:0;
-	font-family:"Droid Sans", Arial, sans-serif;
-	font-size:13px;
-	color:#000;
+    margin:0px;
+    padding:0;
+    font-family:"Droid Sans", Arial, sans-serif;
+    font-size:13px;
+    color:#000;
 }
 
 h1, h2, h3 {
-	margin:0;
-	padding:0;
-	font-weight:normal;
-	color:#000;
+    margin:0;
+    padding:0;
+    font-weight:normal;
+    color:#000;
 }
 
 h1 {
-	font-size:39px;
+    font-size:39px;
 }
 
 h2 {
-	font-size:39px;
+    font-size:39px;
 }
 
 h3 {
-	font-size:1.6em;
-	line-height:26px;
-	padding:26px 0 13px;
+    font-size:1.6em;
+    line-height:26px;
+    padding:13px 0 13px;
 }
 
 p, ul, ol {
-	margin-top:0;
-	line-height:200%;
+    margin-top:0;
+    margin-bottom:2em;
+    line-height:200%;
 }
 
 ul, ol {
 }
 
 a:link {
-	text-decoration:none;
-	color:#BD6800;
+    text-decoration:none;
+    color:#BD6800;
 }
 a:visited {
-	color:#702d00;
+    color:#702d00;
 }
 a:hover {
-	border-bottom:1px dashed #BD6800;
+    border-bottom:1px dashed #BD6800;
 }
 a:active {
 }
 
 div.code div.highlight {
-	font-family:"Droid Sans Mono", monospace;
+    font-family:"Droid Sans Mono", monospace;
 }
 
 #wrapper {
-	margin:0 auto;
-	padding:0;
-	background:#222 url(../images/bg_footer.png) repeat-y left top;
+    margin:0 auto;
+    padding:0;
+    background:#222 url(../images/bg_footer.png) repeat-y left top;
 }
 
 /* Header */
 
 #header-wrapper {
-	height:100px;
-	border-bottom:10px solid #48694C;
+    height:100px;
+    border-bottom:10px solid #48694C;
 }
 
 #header {
-	width:950px;
-	margin:0 auto;
-	padding:0px 0px 0px 30px;
+    width:950px;
+    margin:0 auto;
+    padding:0px 0px 0px 30px;
 }
 
 /* Logo */
 
 #logo {
-	width:280px;
-	margin:0;
-	padding:0 0 52px 0;
-	color:#000;
+    width:228px;
+    margin:0;
+    padding:0 0 52px 0;
+    color:#000;
 }
 
 #logo h1 {
-	margin:0px;
-	padding:0 0 10px 20px;
-	font-family:"Quattrocento", Georgia, "Times New Roman", Times, serif;
+    margin:0px;
+    padding:0 0 10px 0;
+    font-family:"Quattrocento", Georgia, "Times New Roman", Times, serif;
 }
 
 #logo h1 a {
-	color:#FFF;
-	font-size:39px;
-	line-height:42px;
+    color:#FFF;
+    font-size:39px;
+    line-height:42px;
 }
 
 #logo p {
-	margin:0px;
-	padding:0px;
-	font-size:26px;
+    margin:0px;
+    padding:0px;
+    font-size:26px;
 } 
 
 #logo a {
-	border:none;
-	background:none;
-	text-decoration:none;
-	color:#000;
+    border:none;
+    background:none;
+    text-decoration:none;
+    color:#000;
 }
 
 /* Menu */
 
 #menu a {
-	/*color:#e89b0c;*/
-	padding-left:0;
+    /*color:#e89b0c;*/
+    padding-left:0;
 }
 
 #menu {
-	width:280px;
-	margin:0 auto 39px auto;
-	padding:0 0 6px 0;
+    width:280px;
+    margin:0 auto 0 auto;
+    padding:0 0 0 0;
 }
 
 #menu ul {
-	line-height:normal;
-	margin-left:20px
+    line-height:26px;
+    margin-left:20px
 }
 
 #sidebar li li,
 div#menu li {
-	border-bottom:1px dashed #48694C;
-	padding:0 0 6px 0;
+    /*border-bottom:1px dashed #48694C;
+    padding:0 0 6px 0;*/
 }
 
 #sidebar li li.first a,
 #menu li.first a {
-	padding-top:0px;
+    padding-top:0px;
 }
 
 #sidebar li li a,
 #menu a {
-	display:block;
-	margin:0px;
-	line-height:26px;
-	padding:6px 0 0 0;
-	text-decoration:none;
-	font-size:13px;
-	font-weight:bold;
+    display:block;
+    margin:0px;
+    line-height:26px;
+    padding:0 0 0 0;
+    text-decoration:none;
+    font-size:13px;
+    font-weight:bold;
 }
 
 /* Page */
 
 #page {
-	width:1000px;
-	background:#222 url(../images/bg.png) repeat-y left top;
+    width:1000px;
+    background:#222 url(../images/bg.png) repeat-y left top;
 }
 
 #page-bgtop {
 }
 
 #page-bgbtm {
-	overflow:hidden;
-	width:920px;
-	padding:0px;
+    overflow:hidden;
+    width:920px;
+    padding:0px;
 }
 /* Content */
 
 #content {
-	float:left;
-	width:559px;
-	padding:39px 65px 0px 39px;
-	background:transparent;
-	background:#edeae1;
+    float:left;
+    width:585px;
+    padding:39px 39px 0px 39px;
+    background:transparent;
+    background:#edeae1;
 }
 
 .post {
-	margin-bottom:40px;
+    margin-bottom:26px;
 }
 
+/*
 .post img {
-	margin:13px 0;
+    margin:13px 0;
 }
 .post table {
-	margin-bottom:13px;
+    margin-bottom:13px;
 }
+*/
 
 .title {
-	padding:0 0 10px 0;
-	text-transform:lowercase;
-	font-family:"Quattrocento", Georgia, "Times New Roman", Times, serif;
-	letter-spacing:-.5px;
+    padding:0 0 0 0;
+    text-transform:lowercase;
+    font-family:"Quattrocento", Georgia, "Times New Roman", Times, serif;
+    letter-spacing:-.5px;
+    line-height:52px;
 }
 
 .title a {
-	color:#000;
-	border:none;
+    color:#000;
+    border:none;
 }
 
 .meta {
-	overflow:hidden;
-	margin-bottom:26px;
-	padding:0px;
-	text-align:left;
-	font-size:13px;
-	font-weight:bold;
+    overflow:hidden;
+    margin-bottom:26px;
+    padding:0px;
+    text-align:left;
+    font-size:13px;
+    font-weight:bold;
 }
 
 .meta .date {
-	float:left;
+    float:left;
 }
 
 .meta .posted {
-	float:right;
+    float:right;
 }
 
 .meta a {
 }
 
 .post .entry {
-	padding:0 0px 25px 0px;
-	/*border-bottom:1px dashed #DCD4A7;*/
-	border-bottom:1px dashed #ad981d;
-	text-align:justify;
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	hyphens: auto;
+    padding:0 0px 25px 0px;
+    /*border-bottom:1px dashed #DCD4A7;*/
+    border-bottom:1px dashed #ad981d;
+    text-align:justify;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
 }
 
 .post.single .entry {
-	border-bottom:none;
+    padding:0 0px 26px 0px;
+    border-bottom:none;
 }
 
 .links {
-	padding-top:26px;
-	font-size:13px;
-	font-weight:bold;
-	margin:0;
+    font-size:13px;
+    font-weight:bold;
+    margin:0;
 }
 
 /* Archive */
 ul.archive-years {
-	padding:0;
-	overflow:hidden;
+    padding:0;
+    overflow:hidden;
 }
 ul.archive-years li {
-	display:block;	
-	float:left;
-	padding:0 2em 0 0;
+    display:block;  
+    float:left;
+    padding:0 2em 0 0;
 }
 
 /* Sidebar */
 
 #sidebar {
-	float:right;
-	width:247px;
-	margin:0;
-	padding:39px 0 0 10px;
-	color:#FFF;
-	background:transparent;
+    float:right;
+    width:205px;
+    margin:0;
+    padding:39px 26px 0;
+    color:#FFF;
+    background:transparent;
 }
 
 html, 
 body,
 #sidebar
 {
-	height:100%;
+    height:100%;
 }
 
 #wrapper,
 #content
 {
-	min-height:100%;
+    min-height:100%;
 }
 
 #sidebar ul {
-	margin:0;
-	padding:0;
-	list-style:none;
+    margin:0;
+    padding:0;
+    list-style:none;
 }
 
 #sidebar li {
-	margin-left:20px;
-	padding:0;
+    padding:0;
 }
 
 #sidebar li ul {
-	margin:13px 0 0 0;
-	padding-bottom:45px;
+    margin:13px 0 0 0;
 }
 
 #sidebar li ul li {
-	margin-left:0;
+    margin-left:0;
 }
 
 #sidebar li li a {
-	font-weight:normal;
-	padding-left:0;
+    font-weight:normal;
+    padding-left:19px;
+    text-indent:-19px;
 }
 
 #sidebar li li a:hover {
 }
 
 #sidebar h2 {
-	height:26px;
-	line-height:1em;
-	letter-spacing:-.5px;
-	font-size:26px;
-	color:#FFF;
+    padding-top:39px;
+    height:26px;
+    line-height:1em;
+    letter-spacing:-.5px;
+    font-size:26px;
+    color:#FFF;
 }
 
 #sidebar p {
-	margin:0 0px;
-	padding:0px 20px 26px 20px;
+    margin:0 0 26px 0;
 }
 
 #sidebar a,
 #footer a
 {
-	border:none;
-	color:#e39607;
+    border:none;
+    color:#e39607;
 }
 
 /* Footer */
 
 #footer {
-	background:#111;
-	color:#fff;
-	float:left;
-	width:663px;
-	border-right:1px solid #111;
-	border-top:1px solid #000;
-	text-align:center;
-	padding:39px 0;
-	margin-top:39px;
+    background:#111;
+    color:#fff;
+    float:left;
+    width:663px;
+    border-right:1px solid #111;
+    border-top:1px solid #000;
+    text-align:center;
+    padding:39px 0;
+    margin-top:39px;
 }
 
 #footer p {
-	line-height:26px;
-	margin:0;
-	line-height:normal;
+    line-height:26px;
+    margin:0;
+    line-height:normal;
 }
 
 #footer a {
